--- a/css/selectApp.css
+++ b/css/selectApp.css
@@ -4,11 +4,10 @@
 }
 
 .body{
-    background-color: #ffcd60a6;
+    background-color: #009578;
 }
 
 .rounded {
     border: 1px solid rgba(0, 0, 0, 0.616);
-    background-color: #f0b73cc5;
+    background-color: #00634f;
 }
-
