--- a/css/signIn.css
+++ b/css/signIn.css
@@ -8,7 +8,7 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #ffcd60a6;
+  background-color: #009578;
   font-family: 'Roboto', sans-serif;
 }
 
